Making changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -2,11 +2,12 @@
 
 <!--
 
+Copyright
 
 -->
 
 <head>
-	<title>An Example Website</title>
+	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -24,7 +25,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; My Company 2014</p>
 	</footer>
 </body>
 </html>
