--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@
 -->
 
 <head>
-	<title>An Example Website</title>
+	<title>Super Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -20,11 +20,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content that is not so important.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; NoCompany 2014</p>
 	</footer>
 </body>
 </html>
