--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 
 <!--
 
-Adding r noet some text.
+Adding some more text.
 
 -->
 
@@ -11,8 +11,6 @@ Adding r noet some text.
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
-			padding-top: 50px;
-			padding-bottom: 20px;
 		}
 	</style>
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
