--- a/simple.html
+++ b/simple.html
@@ -7,7 +7,7 @@ Adding some more text.
 -->
 
 <head>
-	<title>An Example Website</title>
+	<title>Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
