Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -4,6 +4,8 @@
 
 Adding some more text.
 
+Example text for stash
+
 -->
 
 <head>
@@ -19,7 +21,7 @@ Adding some more text.
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content that is not so important.
+			Even some more content.
 		</p>
 	</main>
 	<footer class="container">
