Updating repo with diff.

--- a/simple.html
+++ b/simple.html
@@ -9,7 +9,7 @@ Example text for stash
 -->
 
 <head>
-	<title>Example Website</title>
+	<title>Simple Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
